--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -1,9 +1,9 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
   "include": [
-    "src/renderer/src/env.d.ts",
-    "src/renderer/src/**/*",
-    "src/renderer/src/**/*.tsx",
+    "src/renderer/pages/env.d.ts",
+    "src/renderer/pages/**/*",
+    "src/renderer/pages/**/*.tsx",
     "src/preload/*.d.ts"
   ],
   "compilerOptions": {
@@ -11,9 +11,10 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@renderer/*": [
-        "src/renderer/src/*"
-      ]
+      "@renderer/*": ["src/renderer/*"],
+      "@pages/*": ["src/renderer/pages/*"],
+      "@mainPage/*": ["src/renderer/pages/main/*"],
+      "@mainPageSrc/*": ["src/renderer/pages/main/src/*"]
     }
   }
 }
