--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -1,20 +1,23 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
   "include": [
-    "src/renderer/pages/env.d.ts",
-    "src/renderer/pages/**/*",
-    "src/renderer/pages/**/*.tsx",
-    "src/preload/*.d.ts"
-  ],
+    "src/renderer/src/env.d.ts",
+    "src/renderer/src/pages/**/*",
+    "src/renderer/src/pages/**/*.tsx",
+    "src/preload/*.d.ts",
+    "src/renderer/src/components/**/*",
+    "src/renderer/src/assets/**/*",
+    ],
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@renderer/*": ["src/renderer/*"],
-      "@pages/*": ["src/renderer/pages/*"],
-      "@mainPage/*": ["src/renderer/pages/main/*"],
-      "@mainPageSrc/*": ["src/renderer/pages/main/src/*"]
+      "@pages/*": ["src/renderer/src/pages/*"],
+      "@assets/*":["src/renderer/src/assets/*"],
+      "@components/*": ["src/renderer/src/components/*"],
+      "@mainPageSrc/*": ["src/renderer/src/pages/main/src/*"],
     }
   }
 }
