--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -7,6 +7,7 @@
     "src/preload/*.d.ts",
     "src/renderer/src/components/**/*",
     "src/renderer/src/assets/**/*",
+    "./mock/**/*"
     ],
   "compilerOptions": {
     "composite": true,
@@ -18,6 +19,7 @@
       "@assets/*":["src/renderer/src/assets/*"],
       "@components/*": ["src/renderer/src/components/*"],
       "@mainPageSrc/*": ["src/renderer/src/pages/main/src/*"],
+      "@mock/*": ["./mock/*"]
     }
   }
 }
